grammar.js
        source_file: ($) => repeat($._declaration),

        // `#` is a line comment EXCEPT when immediately followed by `[` (a decorator)
        decorator: ($) =>
            seq(
                "#[",
                field("name", $.identifier),
                optional(
                    seq(
                        "(",
                        optional(seq(sep1($._expression, ","), optional(","))),
                        ")",
                    ),
                ),
                "]",
            ),

        // any declaration may carry leading pub/ext flags in any order
        _declaration: ($) =>
            choice(
                $.use_declaration,
                $.forward_declaration,
                $.type_alias_declaration,
                $.record_declaration,
                $.union_declaration,
                $.tag_declaration,
                $.value_declaration,
                $.variable_declaration,
                $.function_declaration,
                $.test_declaration,
                $.comptime_if_declaration,
                $.comptime_expression_statement,
            ),

        // pub / ext visibility and linkage flags, any order, zero or more
        modifiers: ($) => repeat1(choice("pub", "ext")),

        // [`decorator`...] [flags] use [alias:] module.path;
        use_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "use",
                optional(seq(field("alias", $.identifier), ":")),
                field("path", $.module_path),
                ";",
            ),

        // [`decorator`...] fwd [alias:] module.path;  (re-export; always public, never `pub`)
        forward_declaration: ($) =>
            seq(
                repeat($.decorator),
                "fwd",
                optional(seq(field("alias", $.identifier), ":")),
                field("path", $.module_path),
                ";",
            ),

        module_path: ($) => sep1($.identifier, "."),

        // [`decorator`...] [flags] def Alias: type;
        // a bodyless `def Name;` declares a handle or abi type
        type_alias_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "def",
                field("name", $.identifier),
                optional(seq(":", field("type", $._type))),
                ";",
            ),

        // [`decorator`...] [flags] rec Name[T, U] { field: type; ... }
        record_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "rec",
                field("name", $.identifier),
                optional($.type_parameters),
                $.field_declaration_list,
            ),

        // [`decorator`...] [flags] uni Name[T, U] { variant: type; ... }
        union_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "uni",
                field("name", $.identifier),
                optional($.type_parameters),
                $.field_declaration_list,
            ),

        // [`decorator`...] [flags] tag Name[T]: disc { case; case: payload; }
        tag_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "tag",
                field("name", $.identifier),
                optional($.type_parameters),
                ":",
                field("discriminator", $._type),
                $.tag_case_list,
            ),

        tag_case_list: ($) => seq("{", repeat($.tag_case), "}"),

        // [`decorator`...] name [: payload];
        tag_case: ($) =>
            seq(
                repeat($.decorator),
                field("name", $.identifier),
                optional(seq(":", field("payload", $._type))),
                ";",
            ),

        field_declaration_list: ($) =>
            seq("{", repeat($.field_declaration), "}"),

        // a leading `$` marks a comptime field (shared typed-name grammar)
        field_declaration: ($) =>
            seq(
                optional(field("comptime", "$")),
                field("name", $.identifier),
                ":",
                field("type", $._type),
                ";",
            ),

        type_parameters: ($) =>
            seq("[", optional(seq(sep1($.identifier, ","), optional(","))), "]"),

        // [`decorator`...] [flags] val name [: type] [= expr];
        value_declaration: ($) =>
            seq(repeat($.decorator), optional($.modifiers), $._value_binding),

        // [`decorator`...] [flags] var name [: type] [= expr];
        variable_declaration: ($) =>
            seq(repeat($.decorator), optional($.modifiers), $._variable_binding),

        // a local binding takes neither decorators nor flags, so `ext`, `pub`
        // and `#[` at statement start are ordinary identifiers and errors
        _value_binding: ($) =>
            seq(
                "val",
                field("name", $.identifier),
                optional(seq(":", field("type", $._type))),
                optional(seq("=", field("value", $._expression))),
                ";",
            ),

        _variable_binding: ($) =>
            seq(
                "var",
                field("name", $.identifier),
                optional(seq(":", field("type", $._type))),
                optional(seq("=", field("value", $._expression))),
                ";",
            ),

        // [`decorator`...] [flags] fun name[T](params) [return_type] (block | ;)
        function_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "fun",
                field("name", $.identifier),
                optional($.type_parameters),
                $.parameter_list,
                optional(field("return_type", $._type)),
                choice($.block, ";"),
            ),

        parameter_list: ($) =>
            seq(
                "(",
                optional(
                    choice(
                        // C-style variadic only: fun f(...)
                        $.variadic_parameter,
                        // comptime pack only: fun f(va: ...)
                        $.pack_parameter,
                        seq(
                            sep1($.parameter, ","),
                            optional(
                                seq(
                                    ",",
                                    // trailing C-style ... or named pack va: ...
                                    optional(choice($.variadic_parameter, $.pack_parameter)),
                                ),
                            ),
                        ),
                    ),
                ),
                ")",
            ),

        // a leading `$` marks a comptime value parameter
        parameter: ($) =>
            seq(
                optional(field("comptime", "$")),
                field("name", $.identifier),
                ":",
                field("type", $._type),
            ),

        // C-style variadic marker (trailing ...)
        variadic_parameter: ($) => "...",

        // comptime variadic pack parameter: name: ...
        pack_parameter: ($) =>
            seq(field("name", $.identifier), ":", "..."),

        // [`decorator`...] [flags] test "name" { body }
        test_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "test",
                field("name", $.string_literal),
                $.block,
            ),

        // declaration-scope: $if (cond) { decls } $or (cond) { decls } $or { decls }
        comptime_expression: ($) =>
            seq(
                "$",
                choice(
                    // $size_of(*T), $fields(T), $offset_of(T, field): the first
                    // operand of these intrinsics is a type, so `*T`, `[N]T`,
                    // `^T` and `Name[T]` read as types rather than expressions
                    seq(
                        field("name", alias(TYPE_OPERAND_INTRINSIC, $.identifier)),
                        "(",
                        field("type", $._type),
                        repeat(seq(",", $._expression)),
                        optional(","),
                        ")",
                    ),
                    // $error("msg"), $type_of(e), $assert(cond, "msg")
                    seq(
                        field("name", $.identifier),
                        "(",
                        optional(seq(sep1($._expression, ","), optional(","))),
                        ")",
                    ),
                    // $mach.build.os, $project.version, $bin.name  (bare comptime path)
                    $.comptime_field_path,
                ),
            ),

        comptime_field_path: ($) => sep1($.identifier, "."),

        block: ($) => seq("{", repeat($._statement), "}"),

        _statement: ($) =>
            choice(
                alias($.local_value_declaration, $.value_declaration),
                alias($.local_variable_declaration, $.variable_declaration),
                $.if_statement,
                $.for_statement,
                $.return_statement,
                $.break_statement,
                $.continue_statement,
                $.defer_statement,
                $.asm_statement,
                $.comptime_if_statement,
                $.comptime_each_statement,
                $.comptime_expression_statement,
                $.block,
                $.expression_statement,
            ),

        return_statement: ($) => seq("ret", optional($._expression), ";"),

        // `brk;` and `cnt;` are statements only when followed by `;`; the
        // precedence takes the keyword over an identifier named brk or cnt
        _expression: ($) =>
            choice(
                $.assignment_expression,
                $.binary_expression,
                $.unary_expression,
                $.sel_expression,
                $.cast_expression,
                $.secret_strip_expression,
                $.typed_literal,
                $.tag_literal,
                $.array_literal,
                $.record_literal,
                $.union_literal,
                $.comptime_expression,
                $._postfix_expression,
            ),

        // call, index, field access, projection, and pack spread form a single
        // left-recursive chain so the LR parser keeps `[ ( . .[` as valid shifts.
        _postfix_expression: ($) =>
            choice(
                $.call_expression,
                $.index_expression,
                $.field_expression,
                $.projection_expression,
                $.pack_spread_expression,
                $.parenthesized_expression,
                $._primary_expression,
            ),

        binary_expression: ($) => {
            const table = [
                [PREC.LOGICAL_OR, "||"],
                [PREC.LOGICAL_AND, "&&"],
                [PREC.BITWISE_OR, "|"],
                [PREC.BITWISE_XOR, "^"],
                [PREC.BITWISE_AND, "&"],
                [PREC.EQUALITY, choice("==", "!=")],
                [PREC.COMPARISON, choice("<", ">", "<=", ">=")],
                [PREC.SHIFT, choice("<<", ">>")],
                [PREC.TERM, choice("+", "-")],
                [PREC.FACTOR, choice("*", "/", "%")],
            ];

            return choice(
                ...table.map(([prec_level, operator]) =>
                    prec.left(
                        prec_level,
                        seq(
                            field("left", $._expression),
                            field("operator", operator),
                            field("right", $._expression),
                        ),
                    ),
                ),
            );
        },

        // -x, !x, ~x, ?x (address-of), @x (dereference)
        field_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("object", $._postfix_expression),
                    ".",
                    field("field", $.identifier),
                ),
            ),

        // v.[f] — comptime field projection; `.` then `[` disambiguates from member
        nil_literal: ($) => "nil",

        // the compiler lexes every keyword as an identifier and recognises it
        // by position; these are the ones also valid at the start of an
        // expression or statement, where the keyword reading would otherwise
        // win. the negative dynamic precedence yields to `rec {`, `cnt;`, ...
        _type: ($) =>
            choice(
                $.primitive_type,
                $.secret_type,
                $.pointer_type,
                $.array_type,
                $.function_type,
                $.generic_type,
                $.record_type,
                $.union_type,
                $.comptime_type,
                $.type_identifier,
            ),

        // $pointee_of(T) / $discriminant_of(T) — comptime type constructors;
        // dynamic precedence favours the type reading over an index expression
        // holding an intrinsic call when both are live after `identifier [`
        primitive_type: ($) =>
            choice(
                "u8",
                "u16",
                "u32",
                "u64",
                "i8",
                "i16",
                "i32",
                "i64",
                "f32",
                "f64",
                "ptr",
            ),

        // ^type marks the value carried by a type as secret
        pointer_type: ($) => prec.left(seq("*", $._type)),

        // [N]type
        array_type: ($) =>
            prec.left(
                seq(
                    "[",
                    field("size", $._expression),
                    "]",
                    field("element", $._type),
                ),
            ),

        // fun(types) [return_type]; parameters are bare types, a trailing
        // `...` marks a C-variadic signature
        record_type: ($) => seq("rec", $.field_declaration_list),

        // anonymous uni { ... } used as a type
        type_identifier: ($) => sep1($.identifier, "."),

        // 42, 0xFF, 0b1010, 0o77, 1_000_000, 42i64, 0xFFu32
        integer_literal: ($) =>
            token(
                choice(
                    seq(
                        "0",
                        choice("x", "X"),
                        /[0-9a-fA-F][0-9a-fA-F_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(
                        "0",
                        choice("b", "B"),
                        /[01][01_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(
                        "0",
                        choice("o", "O"),
                        /[0-7][0-7_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(/[0-9][0-9_]*/, optional(INT_SUFFIX)),
                ),
            ),

        // 3.14, 1.0, 0.5e10, 1.5E-3, 1e0f32, 3.14f64; a fraction or an
        // exponent makes it a float
        string_literal: ($) =>
            token(
                seq(
                    '"',
                    repeat(
                        choice(
                            /\\['"\\ntr0]/,
                            /\\x[0-9a-fA-F]{2}/,
                            /[^"\\]/,
                        ),
                    ),
                    '"',
                ),
            ),

        identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    },
});

// Comma-separated list of one or more items.
function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
