test/corpus/declarations.txt
================================================================================
use: simple import
================================================================================

use std.types.bool;

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (module_path
      (identifier)
      (identifier)
      (identifier))))

================================================================================
use: aliased import
================================================================================

use h: mach.lang_test.helpers;

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    alias: (identifier)
    path: (module_path
      (identifier)
      (identifier)
      (identifier))))

================================================================================
use: single segment
================================================================================

use allocator;

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (module_path
      (identifier))))

================================================================================
fwd: re-export
================================================================================

fwd std.types.option;

--------------------------------------------------------------------------------

(source_file
  (forward_declaration
    path: (module_path
      (identifier)
      (identifier)
      (identifier))))

================================================================================
fwd: aliased re-export
================================================================================

fwd opt: std.types.option;

--------------------------------------------------------------------------------

(source_file
  (forward_declaration
    alias: (identifier)
    path: (module_path
      (identifier)
      (identifier)
      (identifier))))

================================================================================
val: simple value declaration
================================================================================

val CONSTANT: i64 = 42;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
val: pointer type value
================================================================================

val p: *u8 = nil;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (pointer_type
      (primitive_type))
    value: (nil_literal)))

================================================================================
var: without initializer
================================================================================

var x: i64;

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    name: (identifier)
    type: (primitive_type)))

================================================================================
var: with initializer
================================================================================

var x: i64 = 10;

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
val: inferred type
================================================================================

val n = 42;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    value: (integer_literal)))

================================================================================
var: inferred type
================================================================================

var n = 42;

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    name: (identifier)
    value: (integer_literal)))

================================================================================
def: type alias for primitive
================================================================================

def Age: i64;

--------------------------------------------------------------------------------

(source_file
  (type_alias_declaration
    name: (identifier)
    type: (primitive_type)))

================================================================================
def: bodyless handle and abi types
================================================================================

def Opaque;

#[abi_type("va_list")]
def VaList;

#[handle("spirv", "sampled_image", Texture2D)]
pub def Sampler2D;

--------------------------------------------------------------------------------

(source_file
  (type_alias_declaration
    name: (identifier))
  (type_alias_declaration
    (decorator
      name: (identifier)
      (string_literal))
    name: (identifier))
  (type_alias_declaration
    (decorator
      name: (identifier)
      (string_literal)
      (string_literal)
      (identifier))
    (modifiers)
    name: (identifier)))

================================================================================
def: type alias for pointer
================================================================================

def Ptr: ptr;

--------------------------------------------------------------------------------

(source_file
  (type_alias_declaration
    name: (identifier)
    type: (primitive_type)))

================================================================================
def: type alias for anonymous record
================================================================================

def IntPair: rec { a: i64; b: i64; };

--------------------------------------------------------------------------------

(source_file
  (type_alias_declaration
    name: (identifier)
    type: (record_type
      (field_declaration_list
        (field_declaration
          name: (identifier)
          type: (primitive_type))
        (field_declaration
          name: (identifier)
          type: (primitive_type))))))

================================================================================
rec: simple record
================================================================================

rec Point {
    x: i64;
    y: i64;
}

--------------------------------------------------------------------------------

(source_file
  (record_declaration
    name: (identifier)
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (primitive_type))
      (field_declaration
        name: (identifier)
        type: (primitive_type)))))

================================================================================
rec: generic record single param
================================================================================

rec Wrap[T] {
    value: T;
}

--------------------------------------------------------------------------------

(source_file
  (record_declaration
    name: (identifier)
    (type_parameters
      (identifier))
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (type_identifier
          (identifier))))))

================================================================================
rec: generic record multiple params
================================================================================

rec Pair[T, U] {
    left: T;
    right: U;
}

--------------------------------------------------------------------------------

(source_file
  (record_declaration
    name: (identifier)
    (type_parameters
      (identifier)
      (identifier))
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (type_identifier
          (identifier)))
      (field_declaration
        name: (identifier)
        type: (type_identifier
          (identifier))))))

================================================================================
rec: nested record field types
================================================================================

rec Outer {
    inner: Inner;
    z: i64;
}

--------------------------------------------------------------------------------

(source_file
  (record_declaration
    name: (identifier)
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (type_identifier
          (identifier)))
      (field_declaration
        name: (identifier)
        type: (primitive_type)))))

================================================================================
uni: simple union
================================================================================

uni IntOrFloat {
    i: i64;
    f: f64;
}

--------------------------------------------------------------------------------

(source_file
  (union_declaration
    name: (identifier)
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (primitive_type))
      (field_declaration
        name: (identifier)
        type: (primitive_type)))))

================================================================================
uni: union with array field
================================================================================

uni WordBytes {
    value: u32;
    bytes: [4]u8;
}

--------------------------------------------------------------------------------

(source_file
  (union_declaration
    name: (identifier)
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (primitive_type))
      (field_declaration
        name: (identifier)
        type: (array_type
          size: (integer_literal)
          element: (primitive_type))))))

================================================================================
fun: simple function
================================================================================

fun add(a: i64, b: i64) i64 {
    ret a + b;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    (block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
fun: no return type
================================================================================

fun noop() {
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list)
    (block)))

================================================================================
fun: generic function
================================================================================

fun identity[T](value: T) T {
    ret value;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (type_parameters
      (identifier))
    (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier
          (identifier))))
    return_type: (type_identifier
      (identifier))
    (block
      (return_statement
        (identifier)))))

================================================================================
fun: variadic function
================================================================================

fun sum(count: i64, ...) i64 {
    ret 0;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (variadic_parameter))
    return_type: (primitive_type)
    (block
      (return_statement
        (integer_literal)))))

================================================================================
fun: comptime value parameter
================================================================================

fun make($N: u32, x: u32) u32 {
    ret x;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    (block
      (return_statement
        (identifier)))))

================================================================================
fun: signature only
================================================================================

ext fun puts(s: *u8) i32;

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifiers)
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (pointer_type
          (primitive_type))))
    return_type: (primitive_type)))

================================================================================
test: simple test declaration
================================================================================

test smoke_pass_returns_1 {
    ret 1;
}

--------------------------------------------------------------------------------

(source_file
  (test_declaration
    name: (identifier)
    (block
      (return_statement
        (integer_literal)))))

================================================================================
test: string name is rejected
:error
================================================================================

test "label" { }

--------------------------------------------------------------------------------

================================================================================
pub: public value
================================================================================

pub val CONSTANT: i64 = 42;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    (modifiers)
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
pub: public function
================================================================================

pub fun add(a: i64, b: i64) i64 {
    ret a + b;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifiers)
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    (block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
pub: public record
================================================================================

pub rec Point {
    x: i64;
    y: i64;
}

--------------------------------------------------------------------------------

(source_file
  (record_declaration
    (modifiers)
    name: (identifier)
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (primitive_type))
      (field_declaration
        name: (identifier)
        type: (primitive_type)))))

================================================================================
ext: extern function signature
================================================================================

ext fun write(fd: i32, buf: *u8, count: u64) i64;

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifiers)
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (pointer_type
          (primitive_type)))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)))

================================================================================
pub ext: combined flags
================================================================================

pub ext fun malloc(size: u64) *u8;

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifiers)
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (pointer_type
      (primitive_type))))

================================================================================
multiple declarations in sequence
================================================================================

use std.types.bool;

rec Point {
    x: i64;
    y: i64;
}

fun sum(p: *Point) i64 {
    ret p.x + p.y;
}

val PRIVATE_CONST: i64 = 123;

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (module_path
      (identifier)
      (identifier)
      (identifier)))
  (record_declaration
    name: (identifier)
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (primitive_type))
      (field_declaration
        name: (identifier)
        type: (primitive_type))))
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (pointer_type
          (type_identifier
            (identifier)))))
    return_type: (primitive_type)
    (block
      (return_statement
        (binary_expression
          left: (field_expression
            object: (identifier)
            field: (identifier))
          right: (field_expression
            object: (identifier)
            field: (identifier))))))
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
decorator: bare inline decorator on function
================================================================================

#[inline]
fun fast(x: i64) i64 {
    ret x * 2;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (decorator
      name: (identifier))
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    (block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (integer_literal))))))

================================================================================
decorator: symbol decorator with string argument
================================================================================

#[symbol("main")]
fun entry(argc: i64, argv: **u8) i64 {
    ret 0;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (decorator
      name: (identifier)
      (string_literal))
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (pointer_type
          (pointer_type
            (primitive_type)))))
    return_type: (primitive_type)
    (block
      (return_statement
        (integer_literal)))))

================================================================================
decorator: multiple decorators on a global
================================================================================

#[align(64)] #[symbol("g_lit64")]
pub var g_lit64: u8 = 7;

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (decorator
      name: (identifier)
      (integer_literal))
    (decorator
      name: (identifier)
      (string_literal))
    (modifiers)
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
decorator: comptime-expr argument to align
================================================================================

#[align($size_of(Pair))]
pub var g_cmp: u8 = 9;

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (decorator
      name: (identifier)
      (comptime_expression
        name: (identifier)
        type: (type_identifier
          (identifier))))
    (modifiers)
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
decorator: section and symbol on function
================================================================================

#[section(".hottext")] #[symbol("f_hot")]
fun f_hot(x: i64) i64 { ret x + 1; }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (decorator
      name: (identifier)
      (string_literal))
    (decorator
      name: (identifier)
      (string_literal))
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    (block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (integer_literal))))))

================================================================================
decorator: align on record type
================================================================================

#[align(32)]
rec Over { a: u8; }

--------------------------------------------------------------------------------

(source_file
  (record_declaration
    (decorator
      name: (identifier)
      (integer_literal))
    name: (identifier)
    (field_declaration_list
      (field_declaration
        name: (identifier)
        type: (primitive_type)))))

================================================================================
decorator: ext function with library and symbol
================================================================================

#[library("ws2_32.dll")] #[symbol("WSAStartup")]
ext fun wsa_startup(ver: u16, data: *u8) i32;

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (decorator
      name: (identifier)
      (string_literal))
    (decorator
      name: (identifier)
      (string_literal))
    (modifiers)
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (pointer_type
          (primitive_type))))
    return_type: (primitive_type)))

================================================================================
fun: pack variadic parameter
================================================================================

fun sum(va: ...) i64 {
    ret 0;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (pack_parameter
        name: (identifier)))
    return_type: (primitive_type)
    (block
      (return_statement
        (integer_literal)))))

================================================================================
fun: fixed params then pack
================================================================================

fun bias(base: i64, va: ...) i64 {
    ret base;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (pack_parameter
        name: (identifier)))
    return_type: (primitive_type)
    (block
      (return_statement
        (identifier)))))

================================================================================
comptime: $project.version root
================================================================================

val ver: i64 = $project.version;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (comptime_expression
      (comptime_field_path
        (identifier)
        (identifier)))))

================================================================================
comptime: $bin.name root
================================================================================

val name: i64 = $bin.name;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (comptime_expression
      (comptime_field_path
        (identifier)
        (identifier)))))

================================================================================
comptime: $mach.version path
================================================================================

val v: i64 = $mach.version;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (comptime_expression
      (comptime_field_path
        (identifier)
        (identifier)))))

================================================================================
comptime: $mach.os.linux tag
================================================================================

val x: i64 = $mach.os.linux;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (comptime_expression
      (comptime_field_path
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
decorator: empty argument list
================================================================================

#[annotations()]
fun annotated() {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (decorator
      name: (identifier))
    name: (identifier)
    (parameter_list)
    (block)))

================================================================================
comptime: $project.target.os string
================================================================================

val os: i64 = $project.target.os;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (comptime_expression
      (comptime_field_path
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
tag declaration: cases with and without payload
================================================================================

pub tag Shape: u8 {
    empty;
    circle: f32;
    rect: rec { w: f32; h: f32; };
}

--------------------------------------------------------------------------------

(source_file
  (tag_declaration
    (modifiers)
    name: (identifier)
    discriminator: (primitive_type)
    (tag_case_list
      (tag_case
        name: (identifier))
      (tag_case
        name: (identifier)
        payload: (primitive_type))
      (tag_case
        name: (identifier)
        payload: (record_type
          (field_declaration_list
            (field_declaration
              name: (identifier)
              type: (primitive_type))
            (field_declaration
              name: (identifier)
              type: (primitive_type))))))))

================================================================================
tag declaration: generic with decorated case
================================================================================

#[deprecated("use res")]
tag Result[T, E]: u32 {
    ok: T;
    #[deprecated]
    err: E;
}

--------------------------------------------------------------------------------

(source_file
  (tag_declaration
    (decorator
      name: (identifier)
      (string_literal))
    name: (identifier)
    (type_parameters
      (identifier)
      (identifier))
    discriminator: (primitive_type)
    (tag_case_list
      (tag_case
        name: (identifier)
        payload: (type_identifier
          (identifier)))
      (tag_case
        (decorator
          name: (identifier))
        name: (identifier)
        payload: (type_identifier
          (identifier))))))

================================================================================
decorators on use, fwd, def and test
================================================================================

#[deprecated("moved")]
pub use old.path;
#[deprecated]
fwd legacy: old.path;
#[deprecated("use New")]
def Old: New;
#[skip]
test later { }

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (decorator
      name: (identifier)
      (string_literal))
    (modifiers)
    path: (module_path
      (identifier)
      (identifier)))
  (forward_declaration
    (decorator
      name: (identifier))
    alias: (identifier)
    path: (module_path
      (identifier)
      (identifier)))
  (type_alias_declaration
    (decorator
      name: (identifier)
      (string_literal))
    name: (identifier)
    type: (type_identifier
      (identifier)))
  (test_declaration
    (decorator
      name: (identifier))
    name: (identifier)
    (block)))
